# Quadruped

./: .gitignore  README.md
doc/: iic_timing_config.csv
hardware/filelist/: fpga_constraints.f  rtl.f
hardware/fpga/constraints/: kria_kr260.xdc  project_Q.xdc
hardware/fpga/deploy/: Project_Q.dtbo
hardware/fpga/petalinux/.petalinux/: metadata
hardware/fpga/petalinux/project-spec/configs/: config  rootfs_config
hardware/fpga/scripts/: kria_bootmode.tcl  vivado_main.tcl
hardware/fpga/vivado/: Makefile  vivado.jou
hardware/fpga/vivado/project/: Project_Q.bit  Project_Q.xpr  README.hw
hardware/include/: dpsram_interfaces.svh  kria_kr260_interfaces.svh  ov7670_interfaces.svh  project_parameters.vh
hardware/rtl/: axil_reg.sv  axil_reg_wrapper.v  hw_ov7670_src.v  q_top.v
hardware/rtl/neural_engine/: hw_ne_arbiter.sv  hw_ne_write_coeff_buffer.sv
hardware/rtl/spsram/: spsram512x32.sv  xlnx_spsram512x32.v
hardware/rtl/video_interface/: asym_ram_tdp_write_frist.v  axil_reg.sv
hardware/sim/: Makefile  sim.tcl
hardware/sim/tb/: q_top_tb.sv  tb_ne_write_coeff_buffer.sv
hardware/sim/work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qtl
software/: CMakeLists.txt
software/include/: filter.cpp  fir_filter.h  project_properties.h
software/python-model/: hex2png.py  png2hex.py  q_top.py
software/src/: axi_iic.cpp  axi_iic.h  command_parser.cpp  command_parser.h  gpio_driver.cpp  gpio_driver.h  hw_ov7670_src.cpp  hw_ov7670_src.h  main.cpp  mat8b.c  mat8b.h  mmap_utils.cpp  mmap_utils.h  socket_server.cpp  socket_server.h
(+157 files in other folders)
